--- a/lifeCare/src/app/app.html
+++ b/lifeCare/src/app/app.html
@@ -6,7 +6,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
+  <ion-content class="bg-menu">
     <ion-list>
       <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
